# lm-inductive-bias

./: .gitignore  .gitmodules  README.md  pyproject.toml
config/: perturbation_func.json  pfsa_config.yaml
experiments/: include.bash  submit_job.bash
experiments/analysis/: collect_result.bash
experiments/data_preprocessing/: preprocess_babylm.bash  remove_last_token.bash  subsample_babylm.bash
experiments/pfsa/: generate_datasets.sh
experiments/prepare_data/: estimate_local_entropy_kenlm.bash  perturb_sentences.bash  prepare_data.bash
experiments/training/: train_and_evaluate_lstm.bash  train_and_evaluate_transformer.bash
scripts/: variables.bash
src/analysis/: collect_results.py
src/data_preprocessing/: preprocess_babylm.py  process_bllip_subsets.py  process_bllip_val_test.py
src/evaluate/: add_base2_metrics.py
src/local_entropy/: estimate_local_entropy_kenlm.py  ngram_util.py
src/neural_networks/: train_and_evaluate_lstm.sh  train_and_evaluate_transformer.sh
src/perturbation/: perturb_sentences.py  perturbation_func.py
src/pfsa/: fsa.py  fsa_generator.py  sample_dataset.py
